--- a/index.html
+++ b/index.html
@@ -59,20 +59,84 @@
       .animate-bounce-gentle {
         animation: bounce-gentle 2s ease-in-out infinite;
       }
+
+      /* New Mascot Animations */
+      @keyframes shake {
+        0%, 100% { transform: translateX(0); }
+        25% { transform: translateX(-2px) rotate(-1deg); }
+        75% { transform: translateX(2px) rotate(1deg); }
+      }
+      .animate-shake {
+        animation: shake 0.4s ease-in-out infinite;
+        transform-origin: bottom center;
+      }
+
+      @keyframes look-around {
+        0%, 100% { transform: translateX(0); }
+        20% { transform: translateX(-4px); }
+        50% { transform: translateX(-4px); }
+        70% { transform: translateX(4px); }
+        90% { transform: translateX(4px); }
+      }
+      .animate-look {
+        animation: look-around 5s ease-in-out infinite;
+      }
+
+      @keyframes shh-float {
+        0%, 100% { transform: translateY(0); }
+        50% { transform: translateY(-3px); }
+      }
+      .animate-shh {
+        animation: shh-float 1.5s ease-in-out infinite;
+      }
+
+      @keyframes pop {
+        0% { transform: scale(1); }
+        50% { transform: scale(1.1); }
+        100% { transform: scale(1); }
+      }
+      .animate-pop {
+        animation: pop 0.4s ease-out;
+        transform-origin: center;
+      }
+
+      /* Tutorial Animations - Perfect Loops */
+      @keyframes align-paper-loop {
+        0% { transform: rotate(-15deg) translate(-5px, 2px); opacity: 0; }
+        15% { transform: rotate(-15deg) translate(-5px, 2px); opacity: 1; }
+        45% { transform: rotate(5deg) translate(2px, -1px); opacity: 1; }
+        60% { transform: rotate(0deg) translate(0, 0); opacity: 1; }
+        85% { transform: rotate(0deg) translate(0, 0); opacity: 1; } /* Hold aligned */
+        100% { transform: rotate(0deg) translate(0, 0); opacity: 0; } /* Fade out to restart */
+      }
+      .animate-align {
+        animation: align-paper-loop 3s ease-in-out infinite;
+      }
+
+      @keyframes contract-corners {
+        0% { transform: scale(1.3); opacity: 0; }
+        15% { transform: scale(1.3); opacity: 1; }
+        60% { transform: scale(1); opacity: 1; }
+        85% { transform: scale(1); opacity: 1; } /* Hold aligned */
+        100% { transform: scale(1); opacity: 0; } /* Fade out to restart */
+      }
+      .animate-contract {
+        animation: contract-corners 3s ease-in-out infinite;
+      }
     </style>
   <script type="importmap">
 {
   "imports": {
     "react": "https://aistudiocdn.com/react@^19.2.0",
+    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0",
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.554.0"
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/"
   }
 }
 </script>
 </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="./index.tsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
